--- a/package.json
+++ b/package.json
@@ -1,38 +1,46 @@
 {
-  "name": "blogable",
-  "version": "1.0.0",
-  "main": "server.ts",
-  "scripts": {
-    "start": "node ./dist/server.js",
-    "dev": "tsnd --respawn ./src/server.ts",
-    "build": "tsc",
-    "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint src/**/*.ts --fix",
-    "prettier": "prettier . --write",
-    "prettier:fix": "npx prettier --write src"
-  },
-  "author": "SHAHRIAR AHMED <shahriarhacks@gmail.com>",
-  "license": "MIT",
-  "description": "",
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "http-status": "^2.0.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.2",
-    "zod": "^3.24.1"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/cookie-parser": "^1.4.8",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^22.10.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.7.2"
-  }
+   "name": "blogable",
+   "version": "1.0.0",
+   "main": "server.ts",
+   "scripts": {
+      "start": "node ./dist/server.js",
+      "dev": "tsnd --respawn ./src/server.ts",
+      "build": "tsc",
+      "lint": "eslint src/**/*.ts",
+      "lint:fix": "eslint src/**/*.ts --fix",
+      "prettier": "prettier . --write",
+      "prettier:fix": "npx prettier --write src"
+   },
+   "author": "SHAHRIAR AHMED <shahriarhacks@gmail.com>",
+   "license": "MIT",
+   "description": "",
+   "dependencies": {
+      "bcrypt": "^5.1.1",
+      "cookie-parser": "^1.4.7",
+      "cors": "^2.8.5",
+      "dotenv": "^16.4.7",
+      "express": "^4.21.2",
+      "http-status": "^2.0.0",
+      "jsonwebtoken": "^9.0.2",
+      "mongoose": "^8.9.2",
+      "zod": "^3.24.1"
+   },
+   "devDependencies": {
+      "@eslint/js": "^9.17.0",
+      "@types/bcrypt": "^5.0.2",
+      "@types/cookie-parser": "^1.4.8",
+      "@types/cors": "^2.8.17",
+      "@types/express": "^5.0.0",
+      "@types/jsonwebtoken": "^9.0.7",
+      "@types/node": "^22.10.2",
+      "@typescript-eslint/eslint-plugin": "^8.18.2",
+      "@typescript-eslint/parser": "^8.18.2",
+      "eslint": "^9.17.0",
+      "eslint-config-prettier": "^9.1.0",
+      "globals": "^15.14.0",
+      "prettier": "^3.4.2",
+      "ts-node-dev": "^2.0.0",
+      "typescript": "^5.7.2",
+      "typescript-eslint": "^8.18.2"
+   }
 }
