--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
    "scripts": {
       "start": "node ./dist/server.js",
       "dev": "tsnd --respawn ./src/server.ts",
+      "dev:nodemon": "nodemon ./dist/server.js",
       "build": "tsc",
       "lint": "eslint src/**/*.ts",
       "lint:fix": "eslint src/**/*.ts --fix",
@@ -38,7 +39,9 @@
       "eslint": "^9.17.0",
       "eslint-config-prettier": "^9.1.0",
       "globals": "^15.14.0",
+      "nodemon": "^3.1.9",
       "prettier": "^3.4.2",
+      "ts-node": "^10.9.2",
       "ts-node-dev": "^2.0.0",
       "typescript": "^5.7.2",
       "typescript-eslint": "^8.18.2"
